--- a/references.bib
+++ b/references.bib
@@ -1283,6 +1283,7 @@
 }
 
 @inproceedings{beaumont2013,
+  ids = {beaumont2013-1},
   title = {{{ITER}} Project and {{RF}} Systems},
   booktitle = {2013 {{IEEE}} 14th {{International Vacuum Electronics Conference}} ({{IVEC}})},
   author = {Beaumont, B. and Darbos, C. and Henderson, M. and Kazarian, F. and Thomas, P.},
@@ -2218,6 +2219,20 @@
   number = {5}
 }
 
+@inproceedings{birus2005,
+  title = {Measurements and {{Calculations}} of {{CW Transmission Lines}} for {{ICRF}} in {{W7}}-{{X}}},
+  booktitle = {{{AIP Conference Proceedings}}},
+  author = {Birus, D.},
+  year = {2005},
+  volume = {787},
+  pages = {242--245},
+  publisher = {{AIP}},
+  address = {{Park City, Utah (USA)}},
+  issn = {0094243X},
+  doi = {10/fmzhjj},
+  language = {en}
+}
+
 @book{Bladel2007,
   title = {Electromagnetic {{Fields}}},
   author = {Bladel, Jean Van},
@@ -2874,6 +2889,23 @@
   number = {4}
 }
 
+@article{brambilla1979,
+  title = {Waveguide Launching of Lower Hybrid Waves},
+  author = {Brambilla, M.},
+  year = {1979},
+  month = oct,
+  volume = {19},
+  pages = {1343--1357},
+  publisher = {{IOP Publishing}},
+  issn = {0029-5515},
+  doi = {10.1088/0029-5515/19/10/006},
+  abstract = {The theory of launching lower hybrid waves in fusion-oriented plasmas using waveguide arrays (the `grill') is generalized to allow for the excitation of the fast wave in the outer layers of the plasma. It is found that the reflection coefficient of the antenna and the fraction of power radiated in the `inaccessible' portion of the parallel-wavenumber spectrum remain essentially the same as those predicted by the simplified theory considering only the slow plasma wave. The most important new feature is that the power radiated in this part of the spectrum is mainly coupled to discrete waveguide-like eigenmodes confined to the outer layers of the plasma, which guide the power away from the antenna in the direction parallel to the wall of the chamber. This fraction of the power is likely to be lost from the point of view of the heating efficiency; therefore, one should make it as small as possible by using arrays of four guides or more.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\JUD8P4MZ\\Brambilla_1979_Waveguide launching of lower hybrid waves.pdf},
+  journal = {Nuclear Fusion},
+  language = {en},
+  number = {10}
+}
+
 @article{brambilla1983,
   title = {Quasi-Linear Ion Heating by Lower Hybrid Waves},
   author = {Brambilla, M. and Chen, Yan-ping},
@@ -3488,6 +3520,7 @@
 }
 
 @article{calatroni2006,
+  ids = {calatroni2006-1},
   title = {{{RF}} Contacts for the {{LHC}} Collimators},
   author = {Calatroni, Sergio and Perret, Roger and Vollenberg, Wilhelmus},
   year = {2006},
@@ -3497,8 +3530,9 @@
   issn = {01689002},
   doi = {10.1016/j.nima.2006.06.068},
   abstract = {The radio frequency (RF) contacts for the secondary collimators of the LHC accelerator being built at CERN must satisfy several stringent requirements in terms of electrical contact resistance, mechanical robustness, wear resistance and high temperature stability. The guidelines leading to the final choice of contact materials will be discussed in detail, and the results of the experimental tests carried out in order to validate the choices will be illustrated, with particular emphasis on the measurements of contact resistance of various metal pairs.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Calatroni, Perret, Vollenberg_2006_RF contacts for the LHC collimators.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Calatroni, Perret, Vollenberg_2006_RF contacts for the LHC collimators.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\TFDGJ3LF\\Calatroni et al_2006_RF contacts for the LHC collimators.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\HRQS4WKM\\S0168900206012095.html},
   journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  keywords = {Collimators,Contact resistance,CuBe,Impedance,LHC},
   language = {en},
   number = {2}
 }
@@ -5459,6 +5493,7 @@
   issn = {1070-664X},
   doi = {10/ggsxpc},
   abstract = {Radiofrequency (rf) waves can accelerate electrons into material boundaries, so that electron confinement requires rf sheath potentials that are significantly larger than the thermal Bohm sheath. The condition for rf sheaths to occur is that the rf electric field has a component E|| parallel to the equilibrium magnetic field. Thus, a proper treatment of rf wave propagation requires an accurate description of the geometry of the magnetic field and of the bounding surfaces, and a boundary condition (BC) that includes the effect on the waves of the electron-poor sheath. When the static magnetic field has a component at an angle to the sheath, the propagating fast wave (with E||=0E||=0{$<$}math display="inline" overflow="scroll" altimg="eq-00001.gif"{$><$}mrow{$><$}msub{$><$}mrow{$><$}mi mathvariant="normal"{$>$}E{$<$}/mi{$><$}/mrow{$><$}mrow{$><$}mo{$>$}|{$<$}/mo{$><$}mo{$>$}|{$<$}/mo{$><$}/mrow{$><$}/msub{$><$}mo{$>$}={$<$}/mo{$><$}mn{$>$}0{$<$}/mn{$><$}/mrow{$><$}/math{$>$}) is coupled to a slow wave (with E||={$\not$}0E||={$\not$}0{$<$}math display="inline" overflow="scroll" altimg="eq-00002.gif"{$><$}mrow{$><$}msub{$><$}mrow{$><$}mi mathvariant="normal"{$>$}E{$<$}/mi{$><$}/mrow{$><$}mrow{$><$}mo{$>$}|{$<$}/mo{$><$}mo{$>$}|{$<$}/mo{$><$}/mrow{$><$}/msub{$><$}mo{$>$}={$\not{}<$}/mo{$><$}mn{$>$}0{$<$}/mn{$><$}/mrow{$><$}/math{$>$}) in order to satisfy the boundary condition at the metal wall, and the time-averaged sheath potential has a strong component from rectification of the rf sheath. In this brief communication, a previously derived sheath BC is reformulated to treat the coupling of the fast wave to the slow wave analytically, thereby greatly reducing the necessary numerical resolution required for calculation of fast wave propagation.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\I56HBK7L\\D’Ippolito_Myra_2012_A sheath boundary condition for fast wave propagation near conducting surfaces.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\N3RF3628\\1.html},
   journal = {Physics of Plasmas},
   number = {3}
 }
@@ -6254,7 +6289,7 @@
 }
 
 @article{eichin2004,
-  ids = {eichin2004-1},
+  ids = {eichin2004-1,eichin2004-2},
   title = {Measurement and Analysis of Radioactivity Induced in {{CuCrZr}} by {{D}}\textendash{{T}} Neutrons},
   author = {Eichin, R and Adelhelm, C and Blokhin, A.I and Forrest, R.A and Freiesleben, H and Kovalchuk, V.D and Markovskij, D.V and Seidel, K and Unholzer, S},
   year = {2004},
@@ -7444,6 +7479,21 @@
   language = {en}
 }
 
+@article{garner1998,
+  title = {Neutron Irradiation Effects in Fusion or Spallation Structural Materials: {{Some}} Recent Insights Related to Neutron Spectra},
+  shorttitle = {Neutron Irradiation Effects in Fusion or Spallation Structural Materials},
+  author = {Garner, F. A. and Greenwood, L. R.},
+  year = {1998},
+  month = jun,
+  volume = {144},
+  pages = {251--286},
+  issn = {1042-0150, 1029-4953},
+  doi = {10/cr5qdv},
+  journal = {Radiation Effects and Defects in Solids},
+  language = {en},
+  number = {1-4}
+}
+
 @article{garrett2012,
   title = {Mitigation of Radio Frequency Sheaths through Magnetic Field-Aligned {{ICRF}} Antenna Design},
   author = {Garrett, M.L. and Wukitch, S.J.},
@@ -7643,7 +7693,7 @@
 }
 
 @article{godyak1990,
-  title = {{\emph{I}} {\emph{n}} {\emph{s}} {\emph{i}} {\emph{t}} {\emph{u}} Simultaneous Radio Frequency Discharge Power Measurements},
+  title = {In Situ Simultaneous Radio Frequency Discharge Power Measurements},
   author = {Godyak, V. A. and Piejak, R. B.},
   year = {1990},
   month = sep,
@@ -8956,6 +9006,17 @@
   school = {Aix-Marseille University}
 }
 
+@inproceedings{helou2019,
+  title = {Characterizations and First Plasma Operation of the {{WEST}} Load-Resilient Actively Cooled {{ICRF}} Launchers},
+  booktitle = {23rd {{Topical Conference}} on {{Radiofrequency Power}} in {{Plasmas}} ({{RFPPC}} 2019)},
+  author = {Helou, W. and Durodi{\'e}, F. and Hillairet, Julien and Lerche, E. and Lombard, G. and Milanesio, D. and Mollard, P. and Bernard, J.-M. and Charabot, N. and Clairet, F. and Colas, L. and Moudden, Y. and Santraine, B. and Song, Y. and Urbanczyk, G. and Volpe, R. and Wang, Y. and Yang, Q. and Bobkov, V. and Team, West},
+  year = {2019},
+  month = may,
+  abstract = {The paper discusses the characterization of the three high power steady-state and load-resilient ICRF launchers of WEST before their installation in the tokamak. These launchers have been characterized and validated in low-power experiments (milliwatt range) as well as in experiments at the nominal RF voltages and currents in the TITAN vacuum chamber (\$\textbackslash{}sim\$30 kV and 915 A peak). The successful commissioning of two of the launchers during the WEST C3 campaign at \$\textbackslash{}sim\$1 MW power level is illustrated. Manual and real-time controlled impedance-matching of the launchers are discussed, as well as the validation of their load-resilience. Furthermore, several redundant and complementary protection systems have been validated and are reviewed in the paper.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\C357UJEF\\Helou et al_2019_Characterizations and first plasma operation of the WEST load-resilient.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\Z2K68JHZ\\cea-02470093.html},
+  language = {en}
+}
+
 @article{hemmert,
   title = {Window and {{Cavity Breakdown Caused}} by {{High Power Micro}}'waves},
   author = {Hemmert, D and Krompholz, H and Hatfield, L L and Kristiansen, M},
@@ -9223,6 +9284,7 @@
   publisher = {{American Institute of Physics}},
   issn = {0094-243X},
   doi = {10/b7xgtr},
+  copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\QQN6U6YH\\1.html},
   journal = {AIP Conference Proceedings},
   number = {1}
@@ -9336,7 +9398,8 @@
   year = {2014},
   pages = {474--477},
   address = {{Sorrento, Italy}},
-  doi = {10/ggc23d}
+  doi = {10/ggc23d},
+  copyright = {All rights reserved}
 }
 
 @techreport{hillairet2014-1,
@@ -9499,6 +9562,15 @@
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\KEZEXBIU\\Hillairet et al_2020_Plasma Heating & Current Drive Technology.pdf},
   keywords = {\#nosource}
+}
+
+@inproceedings{hillairet2020-2,
+  title = {{{WEST Actively Cooled Load Resilient Ion Cyclotron Resonance Heating Results}}},
+  booktitle = {{{IAEA FEC}}},
+  author = {{hillairet}, julien and Bernard, J. M. and Colas, Laurent},
+  year = {2020},
+  address = {{Nice, France}},
+  copyright = {All rights reserved}
 }
 
 @article{hirano2015,
@@ -12372,7 +12444,7 @@
 }
 
 @incollection{ladurelle1997,
-  title = {First {{Results}} of {{Automatic Matching System}} on {{Tore Supra ICRH Antennas}}; {{Fast Matching Network}} for {{ICRH Systems}}**{{SPINNER Gmbh Erzgiessereistrasse}} 33 {{8000Munich}} 2 {{RFA}}},
+  title = {First {{Results}} of {{Automatic Matching System}} on {{Tore Supra ICRH Antenna}}},
   booktitle = {Fusion {{Technology}} 1996},
   author = {Ladurelle, L. and Agarici, G. and Beaumont, B. and Bremond, S. and Kuus, H. and Lombard, G.},
   editor = {Varandas, C. and Serra, F.},
@@ -12997,6 +13069,7 @@
 }
 
 @article{li2000,
+  ids = {li2000-1},
   title = {Modeling Creep and Fatigue of Copper Alloys},
   author = {Li, G. and Thomas, B. G. and Stubbins, J. F.},
   year = {2000},
@@ -13005,7 +13078,7 @@
   pages = {2491--2502},
   issn = {1073-5623, 1543-1940},
   doi = {10/drbq5h},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Materials and Co\\Li, Thomas, Stubbins_2000_Modeling creep and fatigue of copper alloys.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Materials and Co\\Li, Thomas, Stubbins_2000_Modeling creep and fatigue of copper alloys.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\N2FFLG89\\Li et al_2000_Modeling creep and fatigue of copper alloys.pdf},
   journal = {Metallurgical and Materials Transactions A},
   language = {en},
   number = {10}
@@ -16896,9 +16969,11 @@ simulation capabilities, diagnostic analysis tools, and the plan for base data s
   number = {5}
 }
 
-@article{pauer,
+@inproceedings{pauer2002,
   title = {Creepage of {{Copper}} in {{Mechanically}} and {{Thermally Highly}}-{{Stressed Plug Connectors}}},
+  booktitle = {Proc. of 21st {{ICEC}}},
   author = {Pauer, Ralph and L{\"o}bl, Helmut},
+  year = {2002},
   pages = {6},
   abstract = {Plug connections usually consist of contacts with built-in spring elements which provide the contact force. When there is a requirement for the transmission of large currents at high current densities copper is used for the current path. Under high mechanical stress copper tends to creep depending on the stress, duration and temperature. This means, that the contact force decreases with time and thus, the contact resistance increases. As soon as the contact force drops below a certain minimum level the connection looses its reliability especially at higher current values. This ageing process is determined by the creep of copper. The process is calculated using a finite element model. For the calculation it is necessary to experimentally determine the relevant creep parameters. Using a contact element as an example it is shown how large the deformation of the copper in the highly stressed regions is and how large the resulting loss in contact force is. The comparison between calculation and measurement is in good agreement.},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Materials and Co\\Pauer et al._2002_Creepage of Copper in Mechanically and Thermally Highly-Stressed Plug Connectors.pdf},
@@ -22277,11 +22352,14 @@ Multipactor analysis for different structures were performed, and the breakdown 
   number = {10}
 }
 
-@article{waites,
+@inproceedings{waites1998,
   title = {Sliding {{Contacts}} in {{RF Cavities}}},
+  booktitle = {Proceedings of the 15th {{International Conference}} on {{Cyclotrons}} and Their {{Applications}}},
   author = {Waites, T and Laboratory, The Svedberg},
+  year = {1998},
   pages = {2},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\RF - Electromagnetism\\Waites_1998_Sliding Contacts in RF Cavities.pdf},
+  address = {{Caen, France}},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\LZ4FKYSC\\Waites et Laboratory - Sliding Contacts in RF Cavities.pdf},
   keywords = {⛔ No DOI found},
   language = {en}
 }
@@ -22675,6 +22753,7 @@ Multipactor analysis for different structures were performed, and the breakdown 
 }
 
 @article{wi2018,
+  ids = {wi2018-1},
   title = {Design and {{RF}} Test of a Prototype Traveling Wave Antenna for Helicon Current Drive in {{KSTAR}}},
   author = {Wi, H.H. and Wang, S.J. and Kim, H.J. and Kwak, J.G.},
   year = {2018},
@@ -22684,22 +22763,7 @@ Multipactor analysis for different structures were performed, and the breakdown 
   issn = {09203796},
   doi = {10/gc38j7},
   abstract = {Non-inductive current drive by fast wave at very high ion cyclotron harmonics, known as `helicons' has the potential for high off-axis current drive efficiency compared with the other known non-inductive current drive techniques. However, non-inductive current drive by helicon wave has not been validated experimentally. To validate its anticipated performance experimentally, an antenna design is one of the most important issues. A Traveling wave antenna has particularly valuable features for launching the fast wave such as load resiliency, narrow n|| spectrum, and simple RF circuits without additional-external matching systems. Low power level helicon wave coupling experiments has been conducted successfully using a mock-up TWA in KSTAR. In the next step, in order to investigate a high power performance, a new prototype TWA based on the mock-up TWA has been designed, fabricated and measured for a medium power (100\textendash{}300 kW) RF system. The prototype TWA having a Faraday shield was made of copper and consists of 10 current straps with 5 inch coaxial feeding lines as input and output ports. The detailed design parameters and electromagnetic characteristics of prototype TWA are discussed.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\Wi et al._2018_Design and RF test of a prototype traveling wave antenna for helicon current drive in KSTAR.pdf},
-  journal = {Fusion Engineering and Design},
-  language = {en}
-}
-
-@article{wi2018-1,
-  title = {Design and {{RF}} Test of a Prototype Traveling Wave Antenna for Helicon Current Drive in {{KSTAR}}},
-  author = {Wi, H. H. and Wang, S. J. and Kim, H. J. and Kwak, J. G.},
-  year = {2018},
-  month = jan,
-  volume = {126},
-  pages = {67--72},
-  issn = {0920-3796},
-  doi = {10/gc38j7},
-  abstract = {Non-inductive current drive by fast wave at very high ion cyclotron harmonics, known as `helicons' has the potential for high off-axis current drive efficiency compared with the other known non-inductive current drive techniques. However, non-inductive current drive by helicon wave has not been validated experimentally. To validate its anticipated performance experimentally, an antenna design is one of the most important issues. A Traveling wave antenna has particularly valuable features for launching the fast wave such as load resiliency, narrow n|| spectrum, and simple RF circuits without additional-external matching systems. Low power level helicon wave coupling experiments has been conducted successfully using a mock-up TWA in KSTAR. In the next step, in order to investigate a high power performance, a new prototype TWA based on the mock-up TWA has been designed, fabricated and measured for a medium power (100\textendash{}300kW) RF system. The prototype TWA having a Faraday shield was made of copper and consists of 10 current straps with 5inch coaxial feeding lines as input and output ports. The detailed design parameters and electromagnetic characteristics of prototype TWA are discussed.},
-  file = {C\:\\Users\\JH218595\\Zotero\\storage\\LA95QUJ5\\Wi et al_2018_Design and RF test of a prototype traveling wave antenna for helicon current.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\CIHBCF6V\\S0920379617309183.html},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\Wi et al._2018_Design and RF test of a prototype traveling wave antenna for helicon current drive in KSTAR.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\LA95QUJ5\\Wi et al_2018_Design and RF test of a prototype traveling wave antenna for helicon current.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\CIHBCF6V\\S0920379617309183.html},
   journal = {Fusion Engineering and Design},
   keywords = {Combline antenna,Fast wave,Helicon current drive,KSTAR,RF wave heating,Traveling wave antenna},
   language = {en}
