- add ALOHA part - add FEM LHCD coupling part

--- a/references.bib
+++ b/references.bib
@@ -794,6 +794,7 @@
 }
 
 @article{bae2003,
+  ids = {bae2003-2},
   title = {Design of 5.0-{{GHz KSTAR}} Lower-Hybrid Coupler},
   author = {Bae, Y.S and Paek, C.H and Rhee, M.J and Namkung, W and Cho, M.H and Bernabei, S and Park, H},
   year = {2003},
@@ -803,8 +804,9 @@
   issn = {09203796},
   doi = {10/chzrw2},
   abstract = {The Korean Superconducting Tokamak Advanced Research (KSTAR) tokamak is being constructed to perform long-pulse, high-b , advanced tokamak fusion physics experiments by Korean Basic Science Institute (KBSI). The KSTAR tokamak will use the non-inductive plasma current drive system, lower-hybrid current drive (LHCD) system for lone-pulse operation. A 5.0-GHz microwave coupler is designed for KSTAR LHCD experiments. Four high-power klystrons feed 128 guidelets at front coupler using hundred and twenty 3-dB power dividers including 3-dB power splitters in the coupler. The guidelet has a height of 5.5 cm and the width of 0.55 cm in order for the power flux density not to exceed 4.0 kW/cm2 at the guidelet. The coupler is constructed by laminating a stack of metal plates milled to waveguide patterns. This paper describes detailed design for the 3-dB power splitter, the fixed-phase shifter, and the taper section composing the coupler. Using the High Frequency Structure Simulator (HFSS) program, we achieved a phase difference of 9/0.58 and a relative power difference less than 0.2\% between two vertical guidelets.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Bae et al._2003_Design of 5.0-GHz KSTAR lower-hybrid coupler.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Bae et al._2003_Design of 5.0-GHz KSTAR lower-hybrid coupler.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\D2CVBZUX\\Bae et al_2003_Design of 5.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\RBHY4SU2\\S0920379602003885.html},
   journal = {Fusion Engineering and Design},
+  keywords = {Guidelet,KSTAR,LHCD,Tokamak},
   language = {en},
   number = {4}
 }
@@ -1662,6 +1664,12 @@
   keywords = {\#nosource}
 }
 
+@phdthesis{berio1996,
+  title = {Developpement de Coupleurs a La Frequence Hybride Pour La Generation Non Inductive de Courant Dans Un Tokamak},
+  author = {Berio, S.},
+  year = {1996}
+}
+
 @article{berkner1975,
   title = {Intense, Mixed-Energy Hydrogen Beams for {{CTR}} Injection},
   author = {Berkner, K.H. and Pyle, R.V and Stearns, J.W},
@@ -1723,6 +1731,20 @@
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Bernabei et al._1982_Lower-Hybrid Current Drive in the PLT Tokamak.pdf},
   journal = {Physical Review Letters},
   number = {17}
+}
+
+@article{bernabei2003,
+  title = {Design of a {{Compact Lower Hybrid Coupler}} for {{Alcator C}}-{{Mod}}},
+  author = {Bernabei, Stefano and Hosea, Joel C. and Kung, Chun Chieh and Loesser, George D. and Rushinski, Joseph and Wilson, James R. and Parker, Ronald R. and Porkolab, Miklos},
+  year = {2003},
+  month = mar,
+  volume = {43},
+  pages = {145--152},
+  issn = {1536-1055, 1943-7641},
+  doi = {10/ggc24z},
+  journal = {Fusion Science and Technology},
+  language = {en},
+  number = {2}
 }
 
 @article{bernard,
@@ -2249,6 +2271,7 @@
 }
 
 @article{bo-jiang2006,
+  ids = {bo-jiang2006-1},
   title = {Experimental Characteristics of a Lower Hybrid Wave Multi-Junction Coupler in the {{HT}}-7 Tokamak},
   author = {{Bo-Jiang}, Ding and {Jia-Fang}, Shan and {Fu-Kun}, Liu and {Yu-De}, Fang and Wei, Wei and {Zhen-Wei}, Wu and {Zhong-Yong}, Chen and {Han-Dong}, Xu and Mao, Wang and Min, Jiang and {Gong-Rang}, Zhang and Feng, Huang and {Yan-Ping}, Zhao and {Guang-Li}, Kuang and {team}, Ht-7},
   year = {2006},
@@ -2258,7 +2281,7 @@
   issn = {1009-1963, 1741-4199},
   doi = {10/bvv6dr},
   abstract = {A phase-controlled lower hybrid wave (LHW) multi-junction (MJ) coupler (3(rows)\texttimes{}4(columns)\texttimes{}4 (subwaveguides)) has been developed in the HT-7 tokamak. Simulations show that it is more effective for driving plasma current than an ordinary phase-controlled LHW antenna (3(rows)\texttimes{} 12(columns)) (traditional coupler). The plasma\textendash{}wave coupling experiments show that the reflection coefficient (RC) is below 10\%, implying that the MJ grill can launch the wave into the plasma effectively. The effect of power spectrum launched by the MJ coupler on RC indicates that an optimal condition is requisite for a better coupling in the lower hybrid current drive (LHCD) experiments. Studies indicate that the drive efficiency of the MJ antenna is higher than that of the traditional one, which is mainly ascribed to the discrepancy in impurity concentration, plasma temperature, and spectrum directivity. An improved confinement with an electron internal transport barrier is obtained by LHCD. The analysis shows that the modified negative (low) magnetic shear and the change of radial electric field profile due to LHCD are possible factors responsible for the eITB formation.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ding et al._2006_Experimental characteristics of a lower hybrid wave multi-junction coupler in the HT-7 tokamak.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Ding et al._2006_Experimental characteristics of a lower hybrid wave multi-junction coupler in the HT-7 tokamak.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\JIPKLK6P\\Bo-Jiang et al. - 2006 - Experimental characteristics of a lower hybrid wav.pdf},
   journal = {Chinese Physics},
   language = {en},
   number = {12}
@@ -14426,6 +14449,7 @@
 }
 
 @article{meneghini2009-1,
+  ids = {meneghini2009-2},
   title = {Full Wave Simulation of Lower Hybrid Waves in {{Maxwellian}} Plasma Based on the Finite Element Method},
   author = {Meneghini, O. and Shiraiwa, S. and Parker, R.},
   year = {2009},
@@ -14821,8 +14845,26 @@
   number = {2}
 }
 
+@article{milanesio2011,
+  title = {Benchmark of Coupling Codes ({{ALOHA}}, {{TOPLHA}} and {{GRILL3D}}) with {{ITER}}-Relevant {{Lower Hybrid}} Antenna},
+  author = {Milanesio, D. and Hillairet, J. and Panaccione, L. and Maggiora, R. and Artaud, J. F. and Bae, Y. S. and Barbera, A. M. A. and Belo, J. and {Berger-By}, G. and Bernard, J. M. and Cara, Ph. and Cardinali, A. and Castaldo, C. and Ceccuzzi, S. and Cesario, R. and Decker, J. and Delpech, L. and Ekedahl, A. and Garcia, J. and Garibaldi, P. and Goniche, M. and Guilhem, D. and {Hamlyn-Harris}, C. and Hoang, G. T. and Jia, H. and Huang, Q. Y. and Imbeaux, F. and Kim, S. H. and Lausenaz, Y. and Magne, R. and Marfisi, L. and Meschino, S. and Mirizzi, F. and Namkung, W. and Pajewski, L. and Peysson, Y. and Saille, A. and Schettini, G. and Schneider, M. and Sharma, P. K. and Tuccillo, A. A. and Tudisco, O. and Villari, R. and Vulliez, K. and Wu, Y. and Zeng, Q.},
+  year = {2011},
+  month = oct,
+  volume = {86},
+  pages = {827--830},
+  issn = {0920-3796},
+  doi = {10/cqgd8p},
+  abstract = {In order to assist the design of the future ITER Lower Hybrid launcher, coupling codes ALOHA, from CEA/IRFM, TOPLHA, from Politecnico di Torino, and GRILL3D, developed by Dr. Mikhail Irzak (A.F. Ioffe Physico-Technical Institute, St. Petersburg, Russia) and operated by ENEA Frascati, have been compared with the updated (six modules with four active waveguides per module) Passive-Active Multi-junction (PAM) Lower Hybrid antennas. Both ALOHA and GRILL3D formulate the problem in terms of rectangular waveguides modes, while TOPLHA is based on boundary-value problem with the adoption of a triangular cell-mesh to represent the relevant waveguides surfaces. Several plasma profiles, with varying edge density and density increase, have been adopted to provide a complete description of the simulated launcher in terms of reflection coefficient, computed at the beginning of each LH module, and of power spectra. Good agreement can be observed among codes for all the simulated profiles.},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\U9IYLL33\\Milanesio et al_2011_Benchmark of coupling codes (ALOHA, TOPLHA and GRILL3D) with ITER-relevant.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\Y5F9SETE\\S0920379610005715.html},
+  journal = {Fusion Engineering and Design},
+  keywords = {ITER,Lower Hybrid,PAM},
+  language = {en},
+  number = {6},
+  series = {Proceedings of the 26th {{Symposium}} of {{Fusion Technology}} ({{SOFT}}-26)}
+}
+
 @article{milanesio2012,
-  ids = {milanesio},
+  ids = {milanesio,milanesio2011},
   title = {{{TOPLHA}}: An Accurate and Efficient Numerical Tool for Analysis and Design of {{LH}} Antennas},
   shorttitle = {{{TOPLHA}}},
   author = {Milanesio, D. and Meneghini, O. and Maggiora, R. and Guadamuz, S. and Hillairet, J. and Lancellotti, V. and Vecchi, G.},
@@ -14830,10 +14872,11 @@
   month = jan,
   volume = {52},
   pages = {013008},
+  publisher = {{IOP Publishing}},
   issn = {0029-5515, 1741-4326},
   doi = {10/dxcstg},
   abstract = {This paper presents a self-consistent, integral-equation approach for the analysis of plasma-facing lower hybrid (LH) launchers; the geometry of the waveguide grill structure can be completely arbitrary, including the non-planar mouth of the grill. This work is based on the theoretical approach and code implementation of the TOPICA code, of which it shares the modular structure and constitutes the extension into the LH range. Code results are validated against the literature results and simulations from similar codes.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Milanesio et al._2007_TOPLHA An accurate and efficient numerical tool for analysis and design of LH antennas.pdf;C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Milanesio et al._2012_TOPLHA an Accurate and Efficient Numerical Tool for Analysis.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Milanesio et al._2007_TOPLHA An accurate and efficient numerical tool for analysis and design of LH antennas.pdf;C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Milanesio et al._2012_TOPLHA an Accurate and Efficient Numerical Tool for Analysis.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\XNFSMTD7\\Milanesio et al_2011_TOPLHA.pdf},
   journal = {Nuclear Fusion},
   keywords = {❓ Multiple DOI},
   language = {en},
@@ -15487,12 +15530,14 @@
   number = {17}
 }
 
-@techreport{Moreau1984,
-  title = {Couplage de l'onde Lente Au Voisinage de La Fr{\'e}quence Hybride Basse Dans Les Grands {{Tokamaks}}},
-  author = {Moreau, Didier and Nguyen, T K},
+@techreport{moreau1984,
+  ids = {Moreau1984},
+  title = {Couplage de l'onde Lente Au Voisinage de La Fr{\'e}quence Hybride Basse Dans Les Grands Tokamaks},
+  author = {Moreau, Didier and Nguyen, T. K.},
   year = {1984},
-  institution = {{\{EUR-CEA-FC1246\} Euratom-\{CEA\}}},
-  keywords = {\#nosource}
+  institution = {{EURATOM-CEA}},
+  keywords = {\#nosource},
+  number = {EUR-CEA-FC1246}
 }
 
 @article{moreau1989,
@@ -16890,6 +16935,7 @@ simulation capabilities, diagnostic analysis tools, and the plan for base data s
 }
 
 @article{park2010,
+  ids = {park2010-1},
   title = {Development Status of {{KSTAR 5GHz LHCD}} System},
   author = {Park, S. and Do, H. and Jeong, J.H. and Namkung, W. and Cho, M.H. and Park, H. and Bae, Y.S. and Yang, H.L. and Ellis, R. and Wilson, J.R. and Hosea, J.},
   year = {2010},
@@ -16899,8 +16945,9 @@ simulation capabilities, diagnostic analysis tools, and the plan for base data s
   issn = {09203796},
   doi = {10/bq6xw5},
   abstract = {A steady-state lower hybrid current drive (LHCD) system is under development for advanced tokamak experiments of the Korea Superconducting Tokamak Advanced Research (KSTAR) device. The KSTAR 5 GHz steady-state LHCD system is being designed to couple an input power of 2 MW for 300 s generated by four 5 GHz klystrons. For the development of this system, there are two critical issues. One is the development of a 5 GHz CW klystron for the RF source of the system. The other is the design of a steadystate LH launcher with active water cooling. In this paper, the current status of the development and design for the KSTAR steady-state LHCD system is described. For the LHCD system, aiming at a basic experimental study of 5 GHz LH wave propagation and operational experience with an LHCD system, the installation of an initial LHCD system with a capacity of 0.5 MW for 2 s is scheduled in 2010 using a 5 GHz prototype klystron and an un-cooled 1 MW launcher. The design and progress for the initial LHCD system are also presented.},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Park et al._2010_Development status of KSTAR 5 GHz LHCD system.pdf},
+  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Park et al._2010_Development status of KSTAR 5 GHz LHCD system.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\Q4PJ2TUK\\Park et al_2010_Development status of KSTAR 5GHz LHCD system.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\XUAFLQZ8\\S0920379609002944.html},
   journal = {Fusion Engineering and Design},
+  keywords = {Klystron,KSTAR initial LHCD,KSTAR LHCD,LH launcher},
   language = {en},
   number = {2}
 }
@@ -23670,6 +23717,19 @@ Multipactor analysis for different structures were performed, and the breakdown 
   language = {en}
 }
 
+@article{zhao2010,
+  title = {A 2450 {{MHz}}/2 {{MW Lower Hybrid Current Drive System}} for {{EAST}}},
+  author = {Zhao, Lianmin},
+  year = {2010},
+  month = feb,
+  volume = {12},
+  pages = {118--122},
+  issn = {1009-0630},
+  doi = {10/c6kfkb},
+  journal = {Plasma Science and Technology},
+  number = {1}
+}
+
 @article{zhao2014,
   title = {{{EAST}} Ion Cyclotron Resonance Heating System for Long Pulse Operation},
   author = {Zhao, Y.P. and Zhang, X.J. and Mao, Y.Z. and Yuan, S. and Xue, D.Y. and Deng, X. and Wang, L. and Ju, S.Q. and Cheng, Y. and Qin, C.M. and Chen, G. and Lin, Y. and Li, J.G. and Wan, B.N. and Song, Y.T. and Braun, F. and Kumazawa, R. and Wukitch, S.},
@@ -23874,6 +23934,18 @@ Multipactor analysis for different structures were performed, and the breakdown 
   title = {A Radio-Frequency Sheath Boundary Condition and Its Effect on Slow Wave Propagation: {{Physics}} of {{Plasmas}}: {{Vol}} 13, {{No}} 10},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\8RJTRDVL\\1.html},
   howpublished = {https://aip.scitation.org/doi/10.1063/1.2360507}
+}
+
+@misc{zotero-9011,
+  title = {Design of a {{Compact Lower Hybrid Coupler}} for {{Alcator C}}-{{Mod}}: {{Fusion Science}} and {{Technology}}: {{Vol}} 43, {{No}} 2},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\AYI3B9JD\\FST03-A255.html},
+  howpublished = {https://www.tandfonline.com/doi/abs/10.13182/FST03-A255?casa\_token=h0fPt0qXhH8AAAAA\%3AjUtysEnLU1-4CkrmfqW1lIr5gqJgDiAPsEJuvxKeklnXjk6KFhNAOorvrsvVnAccj8kbSEqRQHjg045R\&}
+}
+
+@misc{zotero-9028,
+  title = {Full Wave Simulation of Lower Hybrid Waves in {{Maxwellian}} Plasma Based on the Finite Element Method: {{Physics}} of {{Plasmas}}: {{Vol}} 16, {{No}} 9},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\IV6AWIP2\\1.html},
+  howpublished = {https://aip.scitation.org/doi/10.1063/1.3216548}
 }
 
 
